[metadata]
name = plu-fendall
version = 1.0.0
author = John Laboe
author_email = john@laboe.org
description = A package to assist in creating, testing, and deploying AWS Lambda functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jflaboe/PythonLambdaUtils
project_urls =
    Bug Tracker = https://github.com/jflaboe/PythonLambdaUtils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src